# crab

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  GITEA_MIRROR.md  KRINEIA.md  LICENSE  PRODUCTIZATION.md  README.md  SECURITY.md  bridge_crab_fm.py  crab_daemon.py  crab_lane_optimizer.py  hummbl.repo.yaml  pyproject.toml
.github/workflows/: ci.yml
_receipts/krineia/: primary.jsonl
_state/handoffs/: HANDOFF_2026-05-11.md
bus/: bus_base.py  crab_bus.py
docs/: BUS_ALIGNMENT_founder_mode.md  DEMO_governance_maturity.md  RELEASE_NOTES.md  REPO_BOUNDARIES.md  REPO_HEALTH.md  SECURITY_SCAN_RECEIPT.md  UNIFIED_ROADMAP.md  adoption-checklist.md  ai-notary-one-pager-georgia.md  ai-notary-one-pager.md  ai-notary-outreach-playbook.md  ga-hb1292-compliance-checklist.md  implementation-guide.md  index.html  message-types.md  methodology.md  source-notes.md  universal-jv-outreach-framework.md
docs/adr/: ADR-001-repo-governance-baseline.md
docs/branding/: CANONICAL_ART_TOOLKIT.md  FILE_ID.DIZ  HUMMBL_TERMINAL_CORE_DESIGN_SYSTEM.md  SELF_REVIEW_2026-05-10.md  TERMINAL_CORE_BRAND.md
docs/branding/assets/: logo_ansi.txt  (+5 more)
docs/handoffs/: 2026-06-22-repo-governance-baseline.md
docs/peer_reviews/: 2026-05-11_unified_peer_review.md  AAR_2026-05-11.md  AAR_2026-05-11_retrograde.md  ASCII_ANSI_ART_CRITIQUE_2026-05-11.md  CONVENTIONS.md
examples/: Dockerfile  README.md  basic.py  custom_backend.py  docker-compose.yml
tests/: test_crab_bus.py  test_daemon.py  test_lane_optimizer.py  test_terminal_rendering.py
(+7 files in other folders)
