[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hummbl-crab"
version = "0.1.0"
description = "Portable CRAB autonomous agent loop and lane tooling"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "HUMMBL" }
]
keywords = ["agents", "automation", "coordination", "crab"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools]
py-modules = [
  "bridge_crab_fm",
  "crab_daemon",
  "crab_lane_optimizer",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
